--- a/TurnBasedRPG/MainViewControllers/TurnBasedRPG/Base.lproj/BattleView.storyboard
+++ b/TurnBasedRPG/MainViewControllers/TurnBasedRPG/Base.lproj/BattleView.storyboard
@@ -52,12 +52,6 @@
                                 <rect key="frame" x="0.0" y="393" width="393" height="467"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VjL-nI-0Mu" customClass="HealthBar" customModule="TurnBasedRPG" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="36"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" red="1" green="0.1408608277" blue="0.05799026551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="topframe" translatesAutoresizingMaskIntoConstraints="NO" id="znA-cM-BvW">
                                         <rect key="frame" x="0.0" y="-1" width="393" height="45"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -94,6 +88,24 @@
                                             </view>
                                         </subviews>
                                     </view>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VjL-nI-0Mu" customClass="HealthBar" customModule="TurnBasedRPG" customModuleProvider="target">
+                                        <rect key="frame" x="5" y="400" width="154" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" red="1" green="0.22688874270000001" blue="0.1778861773" alpha="0.75045174319999997" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AUC-S9-mFZ" customClass="HealthBar" customModule="TurnBasedRPG" customModuleProvider="target">
+                                        <rect key="frame" x="5" y="410" width="154" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.74928252549999996" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vB3-uz-9V5" customClass="HealthBar" customModule="TurnBasedRPG" customModuleProvider="target">
+                                        <rect key="frame" x="5" y="420" width="154" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" red="1" green="0.80000000000000004" blue="0.0" alpha="0.75353422619999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -109,10 +121,12 @@
                         <outlet property="enemyImage" destination="99K-Er-UyK" id="mGH-3O-XgL"/>
                         <outlet property="enemyName" destination="x3A-Cp-74s" id="YZy-NV-wj6"/>
                         <outlet property="enemyView" destination="35O-iS-15e" id="5VA-Mp-e22"/>
+                        <outlet property="energyBar" destination="vB3-uz-9V5" id="HZw-GS-2o8"/>
                         <outlet property="heroHP" destination="VjL-nI-0Mu" id="7Js-Ty-4uN"/>
                         <outlet property="heroName" destination="fKK-OI-Hzk" id="xmh-RV-kxD"/>
                         <outlet property="heroView" destination="G5b-e0-NXW" id="6ay-Q0-MwO"/>
                         <outlet property="lowerConsoleView" destination="chV-ut-bma" id="ttf-Gm-B6c"/>
+                        <outlet property="manaBar" destination="AUC-S9-mFZ" id="tES-2M-pmZ"/>
                         <outlet property="topEnemyView" destination="Ybs-2u-M6J" id="Tk6-wN-ric"/>
                     </connections>
                 </viewController>
