--- a/TurnBasedRPG/Base.lproj/Main.storyboard
+++ b/TurnBasedRPG/Base.lproj/Main.storyboard
@@ -418,8 +418,16 @@
                                         </connections>
                                     </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="topframe" translatesAutoresizingMaskIntoConstraints="NO" id="CMn-d4-FNa">
-                                        <rect key="frame" x="0.0" y="0.0" width="420" height="54"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="420" height="45"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="RightUpperCorner" translatesAutoresizingMaskIntoConstraints="NO" id="bEY-CP-mzz">
+                                        <rect key="frame" x="306" y="0.0" width="114" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LeftUpperCorner" translatesAutoresizingMaskIntoConstraints="NO" id="gMI-1h-Zoa">
+                                        <rect key="frame" x="0.0" y="0.0" width="114" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bottomframe" translatesAutoresizingMaskIntoConstraints="NO" id="yBq-O2-3nz">
                                         <rect key="frame" x="0.0" y="332" width="420" height="57"/>
@@ -532,9 +540,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="IBI-2f-Cbr">
                         <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.3842231035" green="0.37306582929999998" blue="0.31284812090000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.3489983082" green="0.33749046919999998" blue="0.32371100780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" red="0.3842231035" green="0.37306582929999998" blue="0.31284812090000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.3489983082" green="0.33749046919999998" blue="0.32371100780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textShadowColor" systemColor="systemRedColor"/>
@@ -604,12 +612,14 @@
     </scenes>
     <resources>
         <image name="Cockpit" width="512" height="512"/>
+        <image name="LeftUpperCorner" width="154" height="54"/>
+        <image name="RightUpperCorner" width="150" height="54"/>
         <image name="SunMoon" width="1024" height="1024"/>
         <image name="bottomframe" width="494" height="54"/>
         <image name="figure.hiking" catalog="system" width="96" height="128"/>
         <image name="heart.fill" catalog="system" width="128" height="107"/>
         <image name="radialbutton" width="256" height="256"/>
-        <image name="topframe" width="494" height="54"/>
+        <image name="topframe" width="173" height="54"/>
         <image name="volleyball.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
